[package]
name = "rust-kucoin-futures-websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
log = "0.4"
log4rs = { version="1", features = ["background_rotation"]}
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version= "1", features = ["full"] }
tungstenite = { version = "0.15.0", features = ["native-tls"] }
url = "2.2.2"